welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:21: error: not found: value c
    ecritMessage(c)
                 ^ColumnByColumn:24: error: not found: value c
    c=c+1
    ^